--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
-.backimg {
-background-image: url(../images/cristofer-jeschke-BO14MMJLMIk-unsplash.jpg);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.548);
+}
+
+body {
+  min-height: 100vh;
+  min-width: 100vh;
+  background-image: url(../images/clarissa-watson-0aLt3QExk3Y-unsplash.jpg);
+  background-size: cover;
 }
